test: OrderServiceTest를 SpringBootTest로 변경